# splatter_iron

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  TODO.md  TODO_ARCHIVE.md  clippy.toml  cobertura.xml  deny.toml  justfile  pbcopy  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
.opencode/context/project-intelligence/: decisions-log.md  navigation.md  technical-domain.md
docs/architecture/: 0001-mimalloc-global-allocator.md  0001-record-architecture-decisions.md  0002-egui-eframe-gui-framework.md  0002-mimalloc-global-allocator.md  0003-egui-eframe-gui-framework.md  0003-layer-canvas-premultiplied-alpha.md  0004-layer-canvas-premultiplied-alpha.md  0004-simd-rayon-parallel-blend.md  0005-dirty-rect-incremental-rendering.md  0005-simd-rayon-parallel-blend.md  0006-dirty-rect-incremental-rendering.md  0006-rle-compressed-per-pixel-undo.md  0007-rle-compressed-per-pixel-undo.md  0007-visited-stamp-drag-deduplication.md  0008-async-file-io-mpsc.md  0008-visited-stamp-drag-deduplication.md  0009-async-file-io-mpsc.md  0009-zstd-compressed-json-format.md  0010-renderstate-power-management.md  0010-zstd-compressed-json-format.md  0011-renderstate-power-management.md  0011-tool-system-uniform-undorecord.md  0012-tool-system-uniform-undorecord.md  0012-wgpu-gpu-texture-partial-upload.md  0013-record-architecture-decisions.md  0013-wgpu-gpu-texture-partial-upload.md  0014-dirty-rect-list.md  0015-migrate-from-nightly-to-stable.md  0016-generic-asset-library.md  0017-brush-parser-subsystem.md  0018-shared-brush-stroke-params.md  0019-expanded-tool-system.md  0020-extended-async-file-io.md  0021-extended-undo-model.md  0022-full-dirty-rect-list.md  0023-brush-parser-subsystem-current.md  0024-flat-before-pixels-buffer.md
docs/audits/: audit-2026-06-04-1244.md
docs/src/: app.md  asset_library.md  brush_library.md  brush_params.md  canvas.md  debug.md  document.md  file_io.md  files.md  main.md  persistence.md  pixel.md  stamp_library.md  tool_configuration.md  undo.md  undo_history.md
docs/src/app/: frame.md  mod.md
docs/src/file_io/: dialog_manager.md  export_manager.md  load_import_manager.md  save_manager.md
docs/src/tests/: app.md  asset_library.md  brush_common.md  brush_library.md  brush_params.md  brush_parsers.md  bucket_fill.md  canvas.md  circle_brush.md  common.md  custom_brush.md  debug.md  dialog_manager.md  document.md  export_manager.md  file_io.md  files.md  frame.md  load_import_manager.md  mod.md  persistence.md  pixel.md  save_manager.md  square_brush.md  stamp_brush.md  stamp_library.md  tool_configuration.md  undo.md  undo_history.md
docs/src/tools/: brush_common.md  brush_parsers.md  bucket_fill.md  circle_brush.md  custom_brush.md  mod.md  square_brush.md  stamp_brush.md
docs/src/ui/: center.md  dialogs.md  left.md  mod.md  panels.md  right.md  top.md
src/: app.rs  asset_library.rs  brush_library.rs  brush_params.rs  canvas.rs  debug.rs  document.rs  file_io.rs  files.rs  main.rs  persistence.rs  pixel.rs  stamp_library.rs  tool_config.rs  tool_configuration.rs  ui.rs  undo.rs  undo_history.rs
src/app/: frame.rs  mod.rs
src/file_io/: dialog_manager.rs  export_manager.rs  load_import_manager.rs  mod.rs  save_manager.rs
src/tests/: app.rs  asset_library.rs  brush_common.rs  brush_library.rs  brush_params.rs  brush_parsers.rs  bucket_fill.rs  canvas.rs  circle_brush.rs  common.rs  custom_brush.rs  debug.rs  dialog_manager.rs  document.rs  export_manager.rs  file_io.rs  files.rs  frame.rs  load_import_manager.rs  mod.rs  persistence.rs  pixel.rs  save_manager.rs  square_brush.rs  stamp_brush.rs  stamp_library.rs  tool_configuration.rs  undo.rs  undo_history.rs
src/tools/: brush_common.rs  brush_parsers.rs  bucket_fill.rs  circle_brush.rs  custom_brush.rs  mod.rs  pencil.rs  square_brush.rs  stamp_brush.rs
src/ui/: center.rs  dialogs.rs  left.rs  mod.rs  panels.rs  right.rs  top.rs
