[package]
name = "splatter_iron"
version = "0.1.2"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Nguyen Hoang Quoc Anh <hoangquocanhmon@icloud.com>"]
description = "A simple paint program focused on performance and ease of use, currently in early development and not feature complete. Inspired by MS Paint and GIMP."
keywords = ["paint", "drawing", "graphics", "performance", "egui"]

[dependencies]
anyhow = "1.0.102"
ecolor = { version = "0.34.2", features = ["serde"] }
eframe = { version = "0.34.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
# tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs"] }
rayon = "1.5.3"
zstd = { version = "0.13.3", features = ["zstdmt"] }
serde_json = "1.0.150"

# rand = "0.10.1"
rfd = "0.17.2"
wide = "1.4.0"
mimalloc = "0.1.51"
# target = "2.1.0"
bumpalo = { version = "3.20.3", features = ["collections"] }
image = { version = "0.25.10", features = ["avif", "png", "jpeg", "webp", "gif", "tiff", "tga", "ico", "pnm", "qoi", "exr", "hdr", "ff"] }
# type-layout = "0.2"

# [dev-dependencies]
# type-layout = "0.2"

[profile.dev]
overflow-checks = true
incremental = true
panic = "unwind"
codegen-units = 512
opt-level = 1

[profile.release]
strip = true
lto = "fat"
build-override.strip = true
incremental = false
debug = false
codegen-units = 1
opt-level = 3
panic = "abort"

# Enable only when profiling, as it can interfere with optimizations and cause false positives.
# debug = true
# strip = false
# split-debuginfo = "packed"

[lints.rust]
unused = "warn"
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
