[package]
name = "splatter_iron"
version = "0.1.3"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Nguyen Hoang Quoc Anh <hoangquocanhmon@icloud.com>"]
description = "A simple paint program focused on performance and ease of use, currently in early development and not feature complete. Inspired by MS Paint and GIMP."
keywords = ["paint", "drawing", "graphics", "performance", "egui"]

[dependencies]
directories = "6.0.0"
anyhow = "1.0.102"
ecolor = { version = "0.34.3", features = ["serde", "bytemuck"] }
eframe = { version = "0.34.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
# tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs"] }
rayon = "1.5.3"
zstd = { version = "0.13.3", features = ["zstdmt"] }
chrono = "0.4.44"
serde_json = "1.0.150"
rfd = "0.17.2"
wide = "1.4.0"
# rand = "0.10.1"
mimalloc = { version = "0.1.51", features = ["local_dynamic_tls"] }
# target = "2.1.0"
bytemuck = "1.25"
image = { version = "0.25.10", features = [
    "avif", "png", "jpeg", "webp", "gif", "tiff", "tga", "ico",
    "pnm", "qoi", "exr", "hdr", "ff",
] }
# type-layout = "0.2"

[features]
debug-snapshot = []

[dev-dependencies]
tempfile = "3.19.1"

[profile.dev]
overflow-checks = true
incremental = true
panic = "unwind"
codegen-units = 512
opt-level = 1

[profile.release]
overflow-checks = true
strip = true
lto = "fat"
build-override.strip = true
incremental = false
debug = false
codegen-units = 1
opt-level = 3
panic = "abort"

# Enable only when profiling, as it can interfere with optimizations and cause false positives.
# debug = true
# strip = false
# split-debuginfo = "packed"

[lints.rust]
unused = "warn"
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
